bump to 3.0.0